# neurovoxel

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  test_config.yaml
.github/workflows/: pr.yml  release.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/assets/: __init__.py  styles.css
app/components/: footer.py  header.py
app/features/: data_loader.py  model_runner.py  query_builder.py  visualization.py
app/routes/: analysis.py
app/services/: __init__.py  adapters.py
app/utils/: __init__.py  env_utils.py
data/: template.json
docs/: download-results-spec.md  tester-checklist.md
src/neurovoxel/: __init__.py  analysis.py  app.py  cli.py  io.py  test.py  viz.py
src/neurovoxel/components/: __init__.py  data.py  header.py  model_runner.py  text_input.py  user_input.py  visualization.py
src/neurovoxel/utils/: __init__.py  analysis.py  load_parse.py  template.json  viz.py
tests/: __init__.py  test_app.py  test_app_smoke.py  test_cli.py
